--- a/main.css
+++ b/main.css
@@ -85,7 +85,8 @@ body {
    position: relative;
    transform: scale(0.9);
    z-index: 10;
- }
+   overflow: hidden;
+  }
 
 .flower {
   position: absolute;
