--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@ body {
     align-items: flex-end;
     justify-content: center;
     min-height: 100vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('Yesus.jpeg');
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('flowers.jpeg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -86,6 +86,7 @@ body {
    transform: scale(0.9);
    z-index: 10;
    overflow: hidden;
+   max-height: 100vh;
   }
 
 .flower {
