--- a/main.css
+++ b/main.css
@@ -1995,8 +1995,8 @@ body {
   }
 }
 .container * {
-  -webkit-animation-play-state: paused !important;
-  animation-play-state: paused !important;
+  -webkit-animation-play-state: running !important;
+  animation-play-state: running !important;
 }
 
 /* Enhanced background with stars */
