--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@ body {
     align-items: flex-end;
     justify-content: center;
     min-height: 100vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('flowers.jpeg');
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('Yesus.jpeg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
